--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -40,7 +40,29 @@ $screen-lg-min: 80rem;
 }
 
 .container {
-  padding: 20px;
+  padding: 20px 30px;
   margin: 0 auto;
   max-width: 80rem;
+  width: 100%;
+}
+
+.main-text {
+  font-size: 1rem;
+  font-weight: 400;
+  margin: 0 auto;
+  @include md {
+    font-size: 1.3rem;
+  }
+}
+
+.title {
+  display: inline-block;
+  border-bottom: 10px solid $main-yellow;
+  padding-bottom: 20px;
+  font-size: 1.6rem;
+  letter-spacing: -0.08rem;
+  margin-bottom: 40px;
+  @include md {
+    font-size: 2.25rem;
+  }
 }
