--- a/src/styles/MainHero.scss
+++ b/src/styles/MainHero.scss
@@ -3,7 +3,7 @@
 .main-hero {
   .first-row {
     align-items: center;
-    background: url("../images/main-hero.png") no-repeat center center;
+    background: url("../images/main-hero.png") no-repeat fixed;
     background-size: auto;
     display: flex;
     height: 380px;
