--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,9 @@
-@import "./variables.scss";
+// Montserrat import
+@import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Montserrat:wght@400;600;700&display=swap");
+$Montserrat: "Montserrat", sans-serif;
+
+// Colors
+$main-yellow: #ffc700;
 
 * {
   box-sizing: border-box;
@@ -53,10 +58,13 @@ $screen-lg-min: 80rem;
   @include md {
     font-size: 1.3rem;
   }
-  a, a:visited {
+  a,
+  a:visited {
     color: $main-yellow;
     font-weight: 600;
-  } a:hover, a:active {
+  }
+  a:hover,
+  a:active {
     text-decoration: underline;
   }
 }
