--- a/src/styles/Page.scss
+++ b/src/styles/Page.scss
@@ -17,9 +17,6 @@
     margin-bottom: 40px;
     object-fit: cover;
     width: 100%;
-    @include md {
-      max-width: 80%;
-    }
   }
   .page-content {
     align-items: center;
@@ -29,9 +26,6 @@
     p {
       font-size: 1.2rem;
       margin-bottom: 20px;
-      @include md {
-        max-width: 80%;
-      }
     }
     p:last-child {
       margin-bottom: 0;
@@ -40,15 +34,26 @@
 }
 
 .mvv {
+  align-items: center;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
   margin-top: 40px;
   width: 100%;
   @include md {
+    align-items: flex-start;
+    justify-content: space-between;
     flex-direction: row;
   }
   li {
+    padding: 2.5rem;
+    background-color: #f8f8f8;
+    width: 100%;
+    margin-bottom: 20px;
+    @include md {
+      margin-bottom: 0;
+      width: 32%;
+    }
     h2 {
       align-items: center;
       display: flex;
@@ -61,7 +66,10 @@
       }
     }
     span {
-      font-size: 1.2rem;
+      font-size: 1.1rem;
     }
+  }
+  li:last-child {
+    margin-bottom: 0;
   }
 }
