--- a/src/styles/MainStock.scss
+++ b/src/styles/MainStock.scss
@@ -16,7 +16,7 @@
   }
   .vehicles {
     margin-bottom: 40px;
-    ul {
+    .vehicles-cards {
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
