--- a/src/styles/Page.scss
+++ b/src/styles/Page.scss
@@ -13,7 +13,7 @@
 .page {
   padding: 60px 0;
   .store-front {
-    height: 420px;
+    height: 380px;
     margin-bottom: 40px;
     object-fit: cover;
     width: 100%;
@@ -24,11 +24,112 @@
     flex-direction: column;
     width: 100%;
     p {
+      max-width: 52.8rem;
       font-size: 1.2rem;
+      line-height: 1.6rem;
       margin-bottom: 20px;
     }
     p:last-child {
       margin-bottom: 0;
+    }
+  }
+  .contact-form-area {
+    .contact-text {
+      font-size: 1.2rem;
+      line-height: 1.6rem;
+      margin-bottom: 40px;
+    }
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    margin-top: 40px;
+    @include md {
+      align-items: flex-start;
+      flex-direction: row;
+      justify-content: space-between;
+    }
+    div:first-child {
+      width: 100%;
+      margin-bottom: 40px;
+      @include md {
+        margin-bottom: 0x;
+        padding-right: 20px;
+        width: 72%;
+      }
+    }
+    form {
+      display: flex;
+      flex-direction: column;
+      input,
+      select,
+      textarea {
+        background-color: #f8f8f8;
+        border: 1px solid #c4c4c4;
+        box-sizing: border-box;
+        font-family: $Montserrat;
+        font-size: 1.1rem;
+        height: 60px;
+        margin-bottom: 20px;
+        padding: 20px;
+        width: 100%;
+      }
+      input:focus,
+      select:focus,
+      textarea:focus {
+        background-color: #f3f3f3;
+        outline: none;
+      }
+      input::placeholder,
+      textarea::placeholder {
+        color: #000;
+      }
+      select {
+        appearance: none;
+        background-image: linear-gradient(45deg, transparent 50%, gray 50%),
+          linear-gradient(135deg, gray 50%, transparent 50%);
+        background-position: calc(100% - 28px) calc(28px),
+          calc(100% - 20px) calc(28px);
+        background-size: 8px 8px, 8px 8px, 1px 1.5em;
+        background-repeat: no-repeat;
+      }
+      textarea {
+        height: 340px;
+        resize: none;
+        overflow: hidden;
+      }
+      button {
+        background-color: $main-yellow;
+        border: none;
+        cursor: pointer;
+        font-size: 1.1rem;
+        font-weight: 600;
+        height: 60px;
+        text-transform: uppercase;
+        transition: 0.2s ease all;
+      }
+      button:hover,
+      button:active {
+        background-color: #000;
+        color: #fff;
+      }
+    }
+    .contact-list {
+      li {
+        align-items: center;
+        display: flex;
+        margin-bottom: 30px;
+        text-align: left;
+        svg {
+          color: $main-yellow;
+          font-size: 1.8rem;
+        }
+        p {
+          margin-left: 20px;
+        }
+      }
+      li:last-child {
+        margin-bottom: 0;
+      }
     }
   }
 }
