--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -51,7 +51,7 @@
           }
         }
       }
-      @include md {
+      @include lg {
         background: none;
         display: flex;
         margin: 0;
@@ -77,7 +77,7 @@
       color: #fff;
       cursor: pointer;
       height: 100%;
-      @include md {
+      @include lg {
         display: none;
       }
     }
