--- a/src/styles/Page.scss
+++ b/src/styles/Page.scss
@@ -174,3 +174,131 @@
     margin-bottom: 0;
   }
 }
+
+.flex-items {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  .item {
+    width: 100%;
+  }
+  @include md {
+    .item {
+      width: 46%;
+    }
+  }
+}
+
+.radio-input {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  .item {
+    width: 100%;
+  }
+  @include md {
+    .item {
+      width: 46%;
+    }
+  }
+}
+
+.radio {
+  margin-top: -20px;
+  display: flex;
+  label {
+    margin-right: 30px;
+  }
+  input {
+    margin-top: 10px;
+    margin-right: 10px;
+  }
+}
+
+.financiamento {
+  margin: 0 auto;
+  max-width: 52.8rem;
+  display: flex;
+  flex-direction: column;
+  p {
+    font-size: 1.2rem;
+    line-height: 1.6rem;
+    margin-bottom: 20px;
+  }
+  form {
+    display: flex;
+    flex-direction: column;
+    h3 {
+      color: $main-yellow;
+      font-size: 1.6rem;
+      margin: 30px 0 20px 0;
+    }
+    label {
+      font-size: 1rem;
+      align-items: center;
+      display: flex;
+      margin-bottom: 10px;
+      span {
+        font-size: 1rem;
+        font-weight: 600;
+        margin-left: 10px;
+      }
+      @include lg {
+        font-size: 1.2rem;
+      }
+    }
+    input,
+    select,
+    textarea {
+      background-color: #f8f8f8;
+      border: 1px solid #c4c4c4;
+      box-sizing: border-box;
+      font-family: $Montserrat;
+      font-size: 1.1rem;
+      height: 60px;
+      margin-bottom: 20px;
+      overflow: hidden;
+      padding: 20px;
+      width: 100%;
+    }
+    input:focus,
+    select:focus,
+    textarea:focus {
+      background-color: #f3f3f3;
+      outline: none;
+    }
+    input::placeholder,
+    textarea::placeholder {
+      color: #000;
+    }
+    select {
+      appearance: none;
+      background-image: linear-gradient(45deg, transparent 50%, gray 50%),
+        linear-gradient(135deg, gray 50%, transparent 50%);
+      background-position: calc(100% - 28px) calc(28px),
+        calc(100% - 20px) calc(28px);
+      background-size: 8px 8px, 8px 8px, 1px 1.5em;
+      background-repeat: no-repeat;
+    }
+    textarea {
+      height: 340px;
+      resize: none;
+      overflow: hidden;
+    }
+    button {
+      background-color: $main-yellow;
+      border: none;
+      cursor: pointer;
+      font-size: 1.1rem;
+      font-weight: 600;
+      height: 60px;
+      text-transform: uppercase;
+      transition: 0.2s ease all;
+    }
+    button:hover,
+    button:active {
+      background-color: #000;
+      color: #fff;
+    }
+  }
+}
