--- a/src/styles/MainContact.scss
+++ b/src/styles/MainContact.scss
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: column;
     margin-top: 40px;
-    @include md {
+    @include lg {
       align-items: flex-start;
       flex-direction: row;
       justify-content: space-between;
@@ -17,7 +17,7 @@
     div:first-child {
       width: 100%;
       margin-bottom: 40px;
-      @include md {
+      @include lg {
         margin-bottom: 0x;
         padding-right: 20px;
         width: 72%;
@@ -81,7 +81,7 @@
     }
     .contact-list {
       li {
-        align-items: center;
+        align-items: flex-start;
         display: flex;
         margin-bottom: 30px;
         text-align: left;
@@ -90,6 +90,7 @@
           font-size: 1.8rem;
         }
         p {
+          margin-top: 5px;
           margin-left: 20px;
         }
       }
