--- a/src/styles/VehicleCard.scss
+++ b/src/styles/VehicleCard.scss
@@ -67,6 +67,7 @@
       flex-wrap: wrap;
       flex-direction: row;
       justify-content: space-between;
+      gap: 10px;
       li {
         margin-top: 10px;
         width: 48%;
