--- a/src/styles/Vehicles.scss
+++ b/src/styles/Vehicles.scss
@@ -11,7 +11,7 @@
       box-sizing: content-box;
       position: relative;
       margin-top: 30px;
-      max-width: 360px;
+      width: 360px;
       .img-box {
         img {
           height: 280px;
