--- a/src/styles/Vehicles.scss
+++ b/src/styles/Vehicles.scss
@@ -59,4 +59,34 @@
       }
     }
   }
+  .pagination {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 4rem;
+    li + li {
+      margin-left: 0.5rem;
+    }
+    li {
+      margin-top: 1rem;
+      button {
+        border: none;
+        cursor: pointer;
+        padding: 0.5rem 1rem;
+      }
+      button:hover,
+      button:active {
+        background-color: $main-yellow;
+        color: #fff;
+      }
+      @include md {
+        margin-top: 0;
+      }
+    }
+  }
+  .pagination__item--active {
+    background: none;
+    border: none;
+    font-weight: 600;
+  }
 }
