--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -2,12 +2,47 @@
 
 .main-footer {
   width: 100%;
-  .map {
-    iframe {
-      border: none;
-      height: 340px;
-      width: 100%;
+  .social-media {
+    ul {
+      align-items: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      @include md {
+        flex-direction: row;
+      }
+      li {
+        align-items: center;
+        display: flex;
+        a,
+        a:visited {
+          align-items: center;
+          color: #000;
+          display: flex;
+          flex-direction: row;
+          padding: 1rem 1rem;
+          transition: 0.2s ease all;
+          svg {
+            font-size: 1.2rem;
+            margin-right: 0.5rem;
+          }
+        }
+        a:hover {
+          color: #fff;
+          background-color: #000;
+          svg {
+            color: $main-yellow;
+          }
+        }
+      }
+      li + li {
+        margin-left: 0;
+        @include md {
+          margin-left: 3rem;
+        }
+      }
     }
+    background-color: $main-yellow;
   }
   .copyright {
     background-color: #000;
