--- a/src/styles/VehicleCard.scss
+++ b/src/styles/VehicleCard.scss
@@ -58,10 +58,22 @@
       margin-top: 5px;
       word-break: break-all;
     }
+
     .description {
       background-color: #f8f8f8;
       margin: 30px 0;
       padding: 30px;
+      .acessories {
+        margin-top: 1rem;
+        justify-content: space-evenly;
+        li {
+          align-items: flex-start;
+          border: none;
+          font-size: 0.9rem;
+          margin-top: 0.5rem;
+          padding: 0;
+        }
+      }
     }
     .interest {
       align-items: baseline;
@@ -115,6 +127,7 @@
         margin-top: 10px;
         width: 48%;
         img {
+          cursor: pointer;
           height: 140px;
           width: 100%;
           object-fit: cover;
