--- a/src/styles/MainAbout.scss
+++ b/src/styles/MainAbout.scss
@@ -2,6 +2,7 @@
 
 .main-about {
   background: url("../images/main-about.png") no-repeat center center;
+  background-size: cover;
   color: #fff;
   padding: 60px 0;
   text-align: center;
