--- a/src/styles/Page.scss
+++ b/src/styles/Page.scss
@@ -21,6 +21,7 @@
     align-items: center;
     display: flex;
     justify-content: center;
+    margin-top: 2rem;
     margin-bottom: 40px;
     img {
       margin-right: 20px;
